[package]
name = "love-letter"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = { version = "1.1.3", features = ["defmt", "postcard-derive"] }
defmt = "1.0.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
uom = { version = "0.37.0", default-features = false, features = ["serde", "si", "f32"] }
chrono = { version = "0.4.41", features = ["serde"], default-features = false }
